--- a/style.css
+++ b/style.css
@@ -2,9 +2,13 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
     min-height: 100vh;
     min-width: 100%;
     background-image: url(img/lantern.jpg);
@@ -13,3 +17,10 @@ body {
     background-size: cover;
 }
 
+#converter {
+    width: 300px;
+    height: 500px;
+    text-align: center;
+    margin-right: 250px;
+    background-color: white;
+}
