--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+
+
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Noto Sans, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -28,7 +31,7 @@ body {
 
 h1 {
     padding: 15px;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: normal;
     color: #ffffff;
     background-color: #000097;
@@ -43,12 +46,11 @@ form {
     width: 250px;
 }
 
-#convert-bttn, #swap-bttn {
-    border: solid #000000;
-    border-radius: 5px;
+#from-currency, #to-currency {
     height: 45px;
-    font-size: 18px;
-    color: #ffffff
+    border: solid #000097;
+    border-radius: 5px;
+    font-size: 15px;
 }
 
 #amount {
@@ -57,6 +59,14 @@ form {
     border-radius: 5px;
     font-size: 30px;
     text-align: center;
+}
+
+#convert-bttn, #swap-bttn {
+    border: solid #000000;
+    border-radius: 5px;
+    height: 45px;
+    font-size: 18px;
+    color: #ffffff
 }
 
 #convert-bttn {
