--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 
 #converter {
     width: 300px;
-    height: 500px;
+    height: 510px;
     text-align: center;
     margin-right: 250px;
     background-color: #ffffff;
@@ -30,7 +30,7 @@ body {
 }
 
 h1 {
-    padding: 15px;
+    padding: 12px;
     font-size: 25px;
     font-weight: normal;
     color: #ffffff;
@@ -40,6 +40,7 @@ h1 {
 
 form { 
     margin-top: 20px;
+    margin-bottom: 15px;
 }
 
 #amount, #from-currency, #to-currency, #convert-bttn, #swap-bttn {
@@ -61,6 +62,14 @@ form {
     text-align: center;
 }
 
+#convert-bttn {
+    margin-bottom: 10px;
+}
+
+#swap-bttn {
+    margin-bottom: 7px;
+}
+
 #convert-bttn, #swap-bttn {
     border: solid #000000;
     border-radius: 5px;
@@ -76,4 +85,22 @@ form {
 #swap-bttn {
     background-color:#000097 ;
 }
+
+#display-conversion {
+    text-align: left;
+}
+
+h6 {
+    background-color: #f5f4f4;
+    padding-left: 15px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-bottom: 5px;
+}
+
+p {
+    padding-left: 15px;
+    font-size: 20px;
+}
+
 
